--- a/COMPANHIAS/azores.html
+++ b/COMPANHIAS/azores.html
@@ -46,7 +46,7 @@
             <tr>
                 <td>
                     <p>A Azores Airlines faz parte do grupo SATA, fundada nos Açores em 1941 e com mais de sessenta anos
-                        de voos e setenta de História, é a mais antiga companhia aérea portuguesa.</p>
+                        de voos e setenta de História. É a mais antiga companhia aérea portuguesa.</p>
                     <p>Com cinco empresas na sua composição - duas transportadoras aéreas, dois operadores turísticos e
                         uma entidade gestora dos aeródromos do Arquipélago dos Açores – o Grupo SATA tem-se afirmado
                         como uma companhia aérea internacional que abraça a missão de construir pontes atlânticas entre
@@ -106,8 +106,8 @@
             <br>
             <br>
 
-            <p>Tambem não pode faltar a sua melhor companheira vizinha e companheira desde sempre, a
-                <strong>Madeira</strong>, onde ficará a conhecer Funchal e Porto Santo.
+            <p>Tambem não pode faltar a sua melhor vizinha e companheira desde sempre, a
+                <strong>Ilha da Madeira</strong>, onde ficará a conhecer Funchal e Porto Santo.
             </p>
             <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-madeira"
                     target="_blank">Saiba mais</a></p>
@@ -129,7 +129,7 @@
             <br>
 
             <p>Aproveite e viaje até ao
-                <strong>Porto</strong> com a companhia da Azores/SATA, onde conhecerá as tradições desta bonita cidade.
+                <strong>Porto</strong> com a companhia da Azores/SATA, onde conhecerá as tradições desta bela cidade.
             </p>
             <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-porto"
                     target="_blank">Saiba mais</a></p>
@@ -187,7 +187,7 @@
             <br>
             <br>
             <h3>América</h3>
-            <p>Como destino no continente Americano temos três destinos diversos, <strong>Bermudas</strong>,
+            <p>Como destino no continente Americano tem três opções, entre elas <strong>Bermudas</strong>,
                 <strong>Boston</strong> e <strong>Toronto</strong>.
             </p>
             <table>
@@ -235,8 +235,8 @@
             <br>
 
             <h3>Africa</h3>
-            <p>A Azores Airlines leva-nos a conhecer a maior lilha de Cabo Verde, a <strong>Ilha de Santiago</strong>,
-                dando-nos assim uma porta aberta para conhecer esta bela ilha.<p>
+            <p>A Azores Airlines leva-nos a conhecer a maior ilha de Cabo Verde, a <strong>Ilha de Santiago</strong>,
+                dando-nos assim uma porta aberta para conhecer as suas maravilhosas características.<p>
                 <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-cabo-verde"
                         target="_blank">Saiba mais</a></p>
                 <img class="imagem_destinos" src="../img/companhias/destinos/cabo-verde.jpg"
@@ -253,7 +253,7 @@
                 <tr>
                     <td class="td-cont">
                         <h1>A321neo LR</h1>
-                        <p>Como primeiro modelo desta lista temos o A321neo LR, este pode levar até 190 passageiros.A
+                        <p>Como primeiro modelo desta lista temos o A321neo LR, este pode levar até 190 passageiros. A
                             sua velocidade de cruzeiro chega aos 900 Km/h, podendo atingir os 11.900m de altitude.</p>
                     </td>
                     <td>
