--- a/COMPANHIAS/hifly.html
+++ b/COMPANHIAS/hifly.html
@@ -51,7 +51,8 @@
                         aviões com tripulação, manutenção e seguro, incluindo wet lease.
                         O wet lease é quando uma companhia aérea (lessor) disponibiliza um contrato no qual proporciona
                         a tripulação, manutenção e o seguro do avião. Recebe como recompensa o pagamento pelas horas
-                        operadas por parte da companhia operadora que pede esse serviço, o lessee. Onde este suporta os
+                        despendidas por parte da companhia operadora que pede esse serviço, o lessee. Onde este suporta
+                        os
                         restantes custos como o combustível, taxas aeroportuárias, reservas e muito mais.
                     </p>
                 </td>
@@ -75,12 +76,11 @@
                 Força
                 Aérea Belga.</p>
             <p>Em 2008, dois Airbus A310-300s foram adicionados e estão agora em serviço wet lease para a
-                <abbr title="linha aérea do Sultanato de Omã">Oman Air</abbr>, para os seus voos de longo
+                <abbr title="linha aérea do Sultanato de Omã">Oman Air</abbr>, para os voos de longo
                 curso
                 entre Londres e Bangkok.
             </p>
-            <p> Nos finais de 2008 e inícios de 2009, a Airbus entregou um Airbus A330-200 e dois Airbus
-                A340-500, que
+            <p> Nos finais de 2008 e inícios de 2009, a Airbus entregou um A330-200 e dois A340-500, que
                 estão a
                 ser utilizados pela <abbr title="linha aérea privada da Nigéria com base na cidade de Lagos">Arik
                     Air</abbr> para
@@ -116,12 +116,12 @@
     <main>
         <a name="destinos">
             <h2>Destinos</h2>
-            <p>Com mais de 800 profissionais de aviação e mais de 2 milhões de passageiras transportados para o seu
-                distino, a HiFly opera para cerca de 400 destinos diferentes.</p>
+            <p>Com mais de 800 profissionais de aviação e mais de 2 milhões de passageiros transportados para o seu
+                destino, a HiFly opera para cerca de 400 destinos diferentes.</p>
 
-            <p>Principalmente em operações de longo curso em toda a Europa,
-                Estados Unidos, América do Sul, Caraíbas, Médio Oriente, Extremo Oriente, África e Austrália, ou seja,a
-                Hy Fly faz viagens para um pouco por todo o Planeta.</p>
+            <p>Principalmente em operações de longo curso pela Europa,
+                Estados Unidos, América do Sul, Caraíbas, Médio Oriente, Extremo Oriente, África e Austrália; ou seja,a
+                HiFly faz viagens por quase todo o Planeta.</p>
             <br>
             <img src="../img/companhias/destinos/Captura de ecrã 2021-04-24 153856.png"
                 alt="Esta imagem pertence ao site oficial desta companhia, pode aceder á mesma clicando https://hifly.aero/services/?anchor=wet-lease"
