--- a/COMPANHIAS/euro.html
+++ b/COMPANHIAS/euro.html
@@ -51,7 +51,7 @@
                         charter e carga aérea
                         com
                         a sede em Sintra, Portugal e baseada no Aeroporto de Lisboa. Fundada a 12 de agosto de 1993
-                        pelos Senhor Tomaz Metello, iniciando-se com o nome de Air Zarco. E foi só a 17 de maio de 200
+                        pelo Senhor Tomaz Metello, inicialmente com o nome de Air Zarco, só a 17 de maio de 2000 é
                         que veio a ter o nome atual, EuroAtlantic Airways.
                     </p>
 
@@ -74,9 +74,9 @@
                 Ilha da Madeira.</p>
             <p>Começam a explorar rotas esquecidas, como as Caraíbas e o Nordeste do Brasil, com um Lockheed L-1011
                 Tristar, entretanto adquirido pela TAP em 1997.</p>
-            <p>Em 1998 destaca-se a realização da viagem presidencial a Macau com o presidente Jorge Sampaio, Iniciam as
+            <p>Em 1998 destaca-se a realização da viagem presidencial a Macau com o presidente Jorge Sampaio. Iniciam as
                 operações com aviões sem qualquer indicação de nome da companhia, mas no último mês do ano de 1999 isso
-                muda, dando um grande movimento de marketing da empresa, passam a ter a identificação de “Air Zarco”.
+                muda, dando um grande movimento de marketing á empresa, passam a ter a identificação de “Air Zarco”.
             </p>
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/Efvj9gOzyHI"
                 title="YouTube video player" frameborder="0"
