--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         familiar amante de aviões.</p>
                 </td>
                 <td>
-                    <a href="loja.html">
+                    <a href="javascript:funcao1();">
                         <img src="img/loja/sweat branca.png" alt="Imagem oficial do site">
                     </a>
                 </td>
@@ -136,6 +136,23 @@
             offset: 300,
             duration: 900
         });
+
+
+
+        var sistema = 'Infelizmente o sistema falhou. ';
+        var tente = 'Tente novamente mais tarde';
+
+        function funcao1() {
+            window.alert(sistema + tente)
+        }
+
+
+
+
+
+
+
+
     </script>
 
 
