--- a/index.html
+++ b/index.html
@@ -138,12 +138,8 @@
         });
 
 
-
-        var sistema = 'Infelizmente o sistema falhou. ';
-        var tente = 'Tente novamente mais tarde';
-
         function funcao1() {
-            window.alert(sistema + tente)
+            window.alert('Infelizmente o sistema falhou. Tente novamente mais tarde.')
         }
 
 
