--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <table>
             <tr>
                 <td>
-                    <h1>You can fly,</h1>
+                    <h1 style="padding-top: 5%; line-height: 0px;">You can fly,</h1>
                     <h1>Portugal no ar</h1>
                 </td>
                 <td rowspan="2">
