--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </td>
             </tr>
             <tr>
-                <td width:48% style="text-align:justify">
+                <td style="width:48%; text-align:justify">
                     <p>Conheça o que portugal tem a oferecer nos céus. Todas as companhias aéreas ao seu alcance. </p>
                 </td>
                 <td></td>
