--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             </tr>
             <tr>
                 <td width=48%>
-                    <p>Conheça o que portugal tem a oferecer nos céus. Todas as companhias aéreas ao seu alcance. </p>
+                    <p>Conheça o que Portugal pode oferecer nos céus. </p>
+                    <p>Companhias aéreas ao seu alcance. </p>
                 </td>
                 <td></td>
             </tr>
