--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <tr>
                 <td width=48%>
                     <p>Conheça o que Portugal pode oferecer nos céus. </p>
-                    <p>Companhias aéreas ao seu alcance. </p>
+                    <p style="line-height: 0px;">Companhias aéreas ao seu alcance. </p>
                 </td>
                 <td></td>
             </tr>
