--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You Can Fly</title>
-    <link rel="shortcut icon" href="img/logo/Untitled-1_teste.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo/Untitled-1_teste.ico"
+        type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ylj8mcl.css">
@@ -17,79 +18,79 @@
     <img id="imageminicial" src="img/inicial/aerplane.png">
     <div id="rectangleblue"></div>
     <div id="inicio">
-        <table>
-            <tr>
-                <td>
-                    <h1 style="padding-top: 5%; line-height: 0px;">You can fly,</h1>
-                    <h1>Portugal no ar</h1>
-                </td>
-                <td rowspan="2">
-                    <img data-aos="fade-left" src="img/logo/Untitled-1.png" alt="Logotipo original do site" width="25%"
-                        align="middle">
-                </td>
-            </tr>
-            <tr>
-                <td width=48%>
-                    <p>Conheça o que Portugal pode oferecer nos céus. </p>
-                    <p style="line-height: 0px;">Companhias aéreas ao seu alcance. </p>
-                </td>
-                <td></td>
-            </tr>
-        </table>
+        <div class="sobre">
+            <h1 style="padding-top: 5%; line-height: 0px;">You can fly,</h1>
+            <h1>Portugal no ar</h1>
+            <p>Conheça o que Portugal pode oferecer nos céus. </p>
+            <p style="line-height: 0px;">Companhias aéreas ao seu alcance. </p>
+        </div>
+        <div class="sobre_img">
+            <img data-aos="fade-left" src="img/logo/Untitled-1.png"
+                alt="Logotipo original do site">
+        </div>
     </div>
-    <br>
     <div id="ecradois">
         <h1>Companhias Aéreas</h1>
-        <img class="imgcompanhias" src="img/companhias/airplane(teste).jpg">
+
         <section data-aos="fade-right">
-            <table id="tabelacompanhias">
-                <tr>
-                    <td>
-                        <div class="divcompanhias">
-                            <a href="./COMPANHIAS/hifly.html">
-                                <img class="companhias" src="img/companhias/alteradas/HiFly.png">
+            <div class="sobre_companhias">
+                <table id="tabelacompanhias">
+                    <tr>
+                        <td>
+                            <div class="divcompanhias">
+                                <a href="./COMPANHIAS/hifly.html">
+                                    <img class="companhias"
+                                        src="img/companhias/alteradas/HiFly.png">
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <a href="./COMPANHIAS/tap.html">
+                                <img class="companhias"
+                                    src="img/companhias/alteradas/TAP Portugal.jpg"
+                                    alt="tap">
                             </a>
-                        </div>
-                    </td>
-                    <td>
-                        <a href="./COMPANHIAS/tap.html">
-                            <img class="companhias" src="img/companhias/alteradas/TAP Portugal.jpg" alt="tap">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="./COMPANHIAS/white.html">
-                            <img class="companhias" src="img/companhias/alteradas/White-Airways.jfif">
-                        </a>
-                    </td>
-                    <td rowspan="2">
-                        <a href="./COMPANHIAS/euro.html">
-                            <img class="companhias" src="img/companhias/alteradas/EuroAtlantic.png" alt="euro">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="./COMPANHIAS/orbest.html">
-                            <img class="companhias" src="img/companhias/alteradas/orbest.jpg" alt="euro">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="./COMPANHIAS/sevenair.html">
-                            <img class="companhias" src="img/companhias/alteradas/sevenair.jpg">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="./COMPANHIAS/azores.html">
-                            <img class="companhias" src="img/companhias/alteradas/Azores-Airlines.jpg">
-                        </a>
-                    </td>
-                </tr>
-            </table>
+                        </td>
+                        <td>
+                            <a href="./COMPANHIAS/white.html">
+                                <img class="companhias"
+                                    src="img/companhias/alteradas/White-Airways.jfif">
+                            </a>
+                        </td>
+                        <td rowspan="2">
+                            <a href="./COMPANHIAS/euro.html">
+                                <img class="companhias"
+                                    src="img/companhias/alteradas/EuroAtlantic.png"
+                                    alt="euro">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="./COMPANHIAS/orbest.html">
+                                <img class="companhias"
+                                    src="img/companhias/alteradas/orbest.jpg"
+                                    alt="euro">
+                            </a>
+                        </td>
+                        <td>
+                            <a href="./COMPANHIAS/sevenair.html">
+                                <img class="companhias"
+                                    src="img/companhias/alteradas/sevenair.jpg">
+                            </a>
+                        </td>
+                        <td>
+                            <a href="./COMPANHIAS/azores.html">
+                                <img class="companhias"
+                                    src="img/companhias/alteradas/Azores-Airlines.jpg">
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+                <img src="img/companhias/airplane(teste).jpg">
+            </div>
         </section>
     </div>
-    <br>
-    <br>
-    <br>
     <div id="ecratres">
         <table>
             <tr>
@@ -98,8 +99,10 @@
                 </td>
                 <td data-aos="fade-left">
                     <h1>Sobre</h1>
-                    <p>Este site tem como objetivo mostrar aos portugueses e ao mundo que temos bastante por onde
-                        escolher quando se quer viajar. Somos orgulhosos por ter ótimas companhias dispostas a assegurar
+                    <p>Este site tem como objetivo mostrar aos portugueses e ao
+                        mundo que temos bastante por onde
+                        escolher quando se quer viajar. Somos orgulhosos por ter
+                        ótimas companhias dispostas a assegurar
                         a nossa segurança.</p>
                 </td>
             </tr>
@@ -115,14 +118,17 @@
             <tr>
                 <td width="65%">
                     <h1>Loja</h1>
-                    <p>Gostou do nosso site? Veja as nossas roupas e ajude-nos a passar o céu divulgando o nosso
+                    <p>Gostou do nosso site? Veja as nossas roupas e ajude-nos a
+                        passar o céu divulgando o nosso
                         site.</p>
-                    <p>Veja também as nossas decorações para interiores perfeitos para dar de presente ao seu
+                    <p>Veja também as nossas decorações para interiores
+                        perfeitos para dar de presente ao seu
                         familiar amante de aviões.</p>
                 </td>
                 <td>
                     <a href="javascript:funcao1();">
-                        <img src="img/loja/sweat branca.png" alt="Imagem oficial do site">
+                        <img src="img/loja/sweat branca.png"
+                            alt="Imagem oficial do site">
                     </a>
                 </td>
             </tr>
